<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home_title" />

    <item
        android:id="@+id/nav_my_quizzes"
        android:icon="@drawable/ic_book"
        android:title="@string/nav_my_quizzes_title" />

    <item
        android:id="@+id/nav_create_quiz"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_create_quiz_title" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile_title" />
<!--    This route is purely exist for testing, delete it later please-->
    <item
        android:id="@+id/testing"
        android:icon="@drawable/ic_star_rate"
        android:title="@string/testing_activity" />
</menu>
